force-app/main/default/objects/Exhibition_Product__c/Exhibition_Product__c.object-meta.xml
<CustomObject>
    <label>Exhibition Product</label>
    <nameField>
        <displayFormat>EPAI-{YYYY}{MM}-{0000}</displayFormat>
        <label>Exhibition Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exhibition Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>