force-app/main/default/objects/Exhibition_Product__c/fields/Backup_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Backup_Quantity__c</fullName>
    <label>Backup Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>