force-app/main/default/objects/Exhibition_Product__c/fields/Chinese_Name__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Name__c</fullName>
    <label>Chinese Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>