force-app/main/default/objects/Exhibition_Product__c/fields/Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Time__c</fullName>
    <label>Completion Time</label>
    <type>Date</type>
</CustomField>