force-app/main/default/objects/Exhibition_Product__c/fields/Display_Suggestion_And_Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>Display_Suggestion_And_Special_Notes__c</fullName>
    <inlineHelpText>含演示道具、展示方式、安装要求、环境要求、是否通电等</inlineHelpText>
    <label>Display Suggestion And Special Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>