force-app/main/default/objects/Exhibition_Product__c/fields/Features_And_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Features_And_Benefit__c</fullName>
    <label>Features And Benefit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>