force-app/main/default/objects/Exhibition_Product__c/fields/Packaging_Dimension_W__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Dimension_W__c</fullName>
    <inlineHelpText>单位是毫米</inlineHelpText>
    <label>Packaging Dimension W</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>