force-app/main/default/objects/Exhibition_Product__c/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <label>Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A 核心产品 Core Product</fullName>
            </value>
            <value>
                <fullName>B 重点展示 Important Product</fullName>
            </value>
            <value>
                <fullName>C 常规展示 Good to have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>