force-app/main/default/objects/Exhibition_Product__c/fields/Product_Dimension_With_Stand__c.field-meta.xml
<CustomField>
    <fullName>Product_Dimension_With_Stand__c</fullName>
    <inlineHelpText>单位是毫米</inlineHelpText>
    <label>Product Dimension With Stand(W*D*H)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>