force-app/main/default/objects/Exhibition_Product__c/fields/Product_Source__c.field-meta.xml
<CustomField>
    <fullName>Product_Source__c</fullName>
    <inlineHelpText>填写提供展品的公司名称</inlineHelpText>
    <label>Product Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>