force-app/main/default/objects/Exhibition_Product__c/fields/Scenarioized_Display__c.field-meta.xml
<CustomField>
    <fullName>Scenarioized_Display__c</fullName>
    <label>Scenarioized Display</label>
    <length>225</length>
    <type>Text</type>
</CustomField>