force-app/main/default/objects/Exhibition_Product__c/fields/Ship_Back__c.field-meta.xml
<CustomField>
    <fullName>Ship_Back__c</fullName>
    <label>Ship Back</label>
    <length>255</length>
    <type>Text</type>
</CustomField>