force-app/main/default/objects/Exhibition_Product__c/fields/Total_Price_RMB__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_RMB__c</fullName>
    <formula>0.00+ Total_Quantity__c * Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>单价 * 合计数量</inlineHelpText>
    <label>Total Price(RMB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>