force-app/main/default/objects/Exhibition_Product__c/fields/Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight__c</fullName>
    <formula>Total_Quantity__c * Weight_With_Packaging__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>带包装重量 * 合计数量</inlineHelpText>
    <label>Total Weight(kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>