force-app/main/default/objects/Exhibition_Product__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>Unit Price(RMB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>