force-app/main/default/objects/Exhibition_Product__c/fields/Way_Of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Way_Of_Shipment__c</fullName>
    <label>Way Of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>海运 Sea Shipment</fullName>
            </value>
            <value>
                <fullName>空运 Air Shipment</fullName>
            </value>
            <value>
                <fullName>快递 DHL/FedEx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>