force-app/main/default/objects/Exhibition_Product__c/fields/Weight_With_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Weight_With_Packaging__c</fullName>
    <label>Weight With Packaging(kg)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>