force-app/main/default/objects/Exhibition_Product__c/fields/Weight_Without_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Weight_Without_Packaging__c</fullName>
    <label>Weight Without Packaging(kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>