force-app/main/default/objects/Exhibition_Product__c/validationRules/Product_Dimension_without_Stand.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Dimension_without_Stand</fullName>
    <active>true</active>
    <description>You must enter the number * number * number format!</description>
    <errorConditionFormula>AND(!REGEX(Product_Dimension_without_Stand__c,&quot;^(?:[1-9]\\d*|0)(?:\\.\\d+)?\\*(?:[1-9]\\d*|0)(?:\\.\\d+)?\\*(?:(?:[1-9]\\d*|0)(?:\\.\\d+)?|[Cc])$&quot;),
!ISBLANK(Product_Dimension_without_Stand__c) 
)</errorConditionFormula>
    <errorDisplayField>Product_Dimension_without_Stand__c</errorDisplayField>
    <errorMessage>You must enter the number * number * number format!</errorMessage>
</ValidationRule>