force-app/main/default/objects/Exhibition_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chinese_Name__c</columns>
    <columns>English_Name__c</columns>
    <columns>Model_No__c</columns>
    <columns>Priority_Level__c</columns>
    <columns>Product_Source__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Completion_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>